# id-broker

./: Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: azure-test_id-broker.yml
id_broker/: asgi.py  env.py  helper.py  settings.py  urls.py  wsgi.py
id_broker/account/: apps.py  models.py  serializers.py  urls.py  views.py
id_broker/account/migrations/: 0001_initial.py  0002_remove_userprofile_verification_code.py
id_broker/account/templates/: federal_signin.html  oauth2_signin_error.html
id_broker/federal_page/: apps.py  urls.py  views.py
id_broker/federal_page/templates/: federal_signin.html
id_broker/oauth2/: apps.py  urls.py  views.py
id_broker/security/: apps.py  serializers.py  urls.py  views.py
